--- a/sample.css
+++ b/sample.css
@@ -17,9 +17,18 @@ body{
 .container{
     border:2px solid white;
     width: 40%;
+    min-width: 450px;
     position:absolute ;
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
     min-width: 450px;
+    padding: 30px 40px;
+}
+#newtask{
+  background-color: #ffffff;
+  padding: 30px 20px;
+  border-radius: 5px;
+  box-shadow: 0  15px 30px rgba(0, 0, 0, 0.3);
+  position: relative;
 }
