--- a/sample.css
+++ b/sample.css
@@ -32,3 +32,44 @@ body{
   box-shadow: 0  15px 30px rgba(0, 0, 0, 0.3);
   position: relative;
 }
+#newtask input{
+  width: 70%;
+  height: 45px;
+  font-family: 'Poppins',sans-serif;
+  font-size: 15px;
+  font-weight:500;
+  padding: 12px;
+  color: #111111;
+  border: 2px solid #d1d3d4;
+  position: relative;
+   border-radius: 5px;
+}
+
+#newtask input:focus{
+  outline: none;
+  border-color: #8052ec;
+}
+
+#newtask button{
+ position: relative;
+ float: right;
+ width: 20%;
+ height: 45px;
+ border-radius: 5px;
+ font-family: 'Poppins',sans-serif;
+ font-weight: 500;
+ font-size: 16px;
+ background-color: #8052ec;
+ border: none;
+ color: #ffffff;
+ cursor: pointer;
+}
+#tasks{
+  background-color: #ffffff;
+  padding: 30px 20px;
+  margin-top: 60px;
+  border-radius: 10px;
+  box-shadow: 0  15px 30px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  position:relative ;
+}
