--- a/sample.css
+++ b/sample.css
@@ -73,3 +73,31 @@ body{
   width: 100%;
   position:relative ;
 }
+.task{
+  background-color: #ffffff;
+  height: 50px;
+ margin-top: 10px;
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ padding: 5px 10px; 
+ border-bottom: 2px solid #d1d3d4;
+ cursor: pointer;
+}
+
+.task span{
+    font-family: 'Poppins',sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.task button{
+  background-color: #8052ec;
+  height: 100%;
+  width: 40px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: #ffffff;
+}
